# mousefood

./: .gitignore  BREAKING-CHANGES.md  CHANGELOG.md  Cargo.toml  README.md  _typos.toml
.github/workflows/: ci.yml  release-plz.yml
examples/: README.md
examples/epd-waveshare-demo/: Cargo.toml
examples/esp32-c6-embassy-example/: Cargo.toml  README.md  rust-toolchain.toml
examples/esp32-c6-embassy-example/.cargo/: config.toml  esp-config.toml
examples/esp32-c6-embassy-example/src/: main.rs
examples/esp32-no-std-demo/: Cargo.toml
examples/esp32-no-std-demo/src/: main.rs
examples/esp32-std-demo/: Cargo.toml  README.md
examples/esp32-std-demo/src/: chart.rs  gauge.rs  main.rs  ratatui_logo.rs  tabs.rs  voltage.rs
examples/lilygo-epd47-demo/: Cargo.toml  README.md
examples/lilygo-epd47-demo/.cargo/: config.toml
examples/lilygo-epd47-demo/src/: main.rs
examples/rp2040-1in54-epd-example/: Cargo.toml  README.md  build.rs  flash.uf2
examples/rp2040-1in54-epd-example/.cargo/: config.toml
examples/rp2040-1in54-epd-example/src/: main.rs
examples/simulator/: Cargo.toml  README.md
examples/simulator/src/: main.rs  minimal.rs  modifiers.rs  mods.rs
examples/stm32-nucleo-oled-example/: Cargo.toml  README.md
examples/stm32-nucleo-oled-example/.cargo/: config.toml
examples/stm32-nucleo-oled-example/src/: main.rs
mousefood/: Cargo.toml
mousefood-extras/: Cargo.toml
mousefood-extras/src/: lib.rs  logo.rs
mousefood-extras/src/snapshots/: mousefood_extras__logo__tests__render_mousefood_logo.snap
mousefood/src/: backend.rs  colors.rs  cursor.rs  error.rs  framebuffer.rs  lib.rs
