[workspace]
resolver = "3"
members = ["mousefood", "examples/*"]
default-members = ["mousefood"]

[workspace.package]
edition = "2024"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ratatui/mousefood"
repository = "https://github.com/ratatui/mousefood"
keywords = ["embedded-graphics", "ratatui", "tui"]
categories = ["embedded"]
exclude = ["/.github", "/assets"]

[profile.dev]
# Symbols are nice and they don't increase the size on Flash
debug = true
opt-level = 3

[profile.release]
# LLVM can perform better optimizations using a single thread
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[workspace.dependencies]
ratatui-core = "0.1.0"
thiserror = { version = "2.0.18", default-features = false }
embedded-graphics = "0.8.2"
embedded-graphics-simulator = "0.8.0"
embedded-graphics-unicodefonts = "0.2.0"
weact-studio-epd = { version = "0.1.2", features = ["blocking"] }
epd-waveshare = "0.6.0"
ratatui = { version = "0.30.0", default-features = false }
rstest = "0.26.1"
paste = "1.0.15"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"
