[package]
name = "mousefood-extras"
description = "Extras for mousefood"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["mousefood", "ratatui", "tui"]
categories = ["no-std", "graphics"]

[dependencies]
indoc = "2"
itertools = { version = "0.14", default-features = false }
ratatui-core.workspace = true

[dev-dependencies]
insta = "1"
