[workspace]
members = ["."]
resolver = "2"

[package]
edition      = "2024"
name         = "esp32-c6-embassy-example"
rust-version = "1.95"
version      = "0.1.0"

[[bin]]
name = "esp32-c6-embassy-example"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["defmt", "esp32c6", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c6",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32c6"] }

bt-hci = "0.8.0"
embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.10.0", features = ["defmt"] }
esp-radio = { version = "0.18.0", features = [
  "ble",
  "defmt",
  "esp-alloc",
  "esp32c6",
  "unstable",
] }
rtt-target = { version = "0.6.2", features = ["defmt"] }


embassy-sync = { version = "0.8.0", features = ["defmt"] }

embedded-hal-bus = "0.3"
trouble-host = { version = "0.6.0", features = ["gatt"] }

critical-section = "1.2.0"
static_cell      = "2.1.1"


weact-studio-epd    = { version = "0.1.2", features = ["blocking"] }
display-interface-spi = "0.5"
embedded-graphics   = "0.8.2"


mousefood = { path = "../../mousefood/", default-features = false, features = ["epd-weact", "fonts"] }
ratatui             = { version = "0.30.0", default-features = false }
heapless            = "0.9.2"

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
