[package]
name = "simulator"
edition.workspace = true
license.workspace = true
publish = false
default-run = "minimal"

[dependencies]
mousefood = { path = "../../mousefood/" , features = ["blink"]}
embedded-graphics-simulator.workspace = true
ratatui.workspace = true

[[bin]]
name = "minimal"
path = "src/minimal.rs"

[[bin]]
name = "modifiers"
path = "src/modifiers.rs"
